# docs/swagger.json
@@ -16,7 +16,7 @@
         },
         "version": "1.0.1"
     },
-    "host": "gw.verifire.com/mail",
+    "host": "gw.verifire.dev/mail",
     "basePath": "/",
     "paths": {
         "/v1/feedback": {
@@ -39,7 +39,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/WebServer.FeedbackRequest"
+                            "$ref": "#/definitions/rest.FeedbackRequest"
                         }
                     }
                 ],
@@ -47,25 +47,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/WebServer.Response"
+                            "$ref": "#/definitions/rest.Response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/WebServer.ErrResponse"
+                            "$ref": "#/definitions/rest.ErrorResponse"
                         }
                     },
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
-                            "$ref": "#/definitions/WebServer.ErrResponse"
+                            "$ref": "#/definitions/rest.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/WebServer.ErrResponse"
+                            "$ref": "#/definitions/rest.ErrorResponse"
                         }
                     }
                 }
@@ -73,19 +73,19 @@
         }
     },
     "definitions": {
-        "WebServer.ErrResponse": {
+        "rest.ErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
-                "data": {},
+                "error": {},
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "WebServer.FeedbackRequest": {
+        "rest.FeedbackRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -99,7 +99,7 @@
                 }
             }
         },
-        "WebServer.Response": {
+        "rest.Response": {
             "type": "object",
             "properties": {
                 "data": {},
